# x86minimal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bochsrc.txt  build.sh
grub/: grub.cfg
src/: kmain.cpp  link.ld  loader.s
